tests/baselines/reference/genericConstructInvocationWithNoTypeArg.errors.txt
tests/cases/compiler/genericConstructInvocationWithNoTypeArg.ts(4,27): error TS2304: Cannot find name 'Foo'.


==== tests/cases/compiler/genericConstructInvocationWithNoTypeArg.ts (1 errors) ====
    interface Foo<T> {
       new (x: number): Foo<T>;
    }
    var f2: Foo<number> = new Foo(3);
                              ~~~
!!! error TS2304: Cannot find name 'Foo'.
    